Make config-yaml a full extension
With the existing set up, it wasn't possible to install it.

--- a/extensions/config-yaml/pom.xml
+++ b/extensions/config-yaml/pom.xml
@@ -15,6 +15,7 @@
    <packaging>pom</packaging>
    <modules>
        <module>runtime</module>
+       <module>deployment</module>
    </modules>
 
 </project>
