--- a/extensions/hibernate-search-elasticsearch/runtime/pom.xml
+++ b/extensions/hibernate-search-elasticsearch/runtime/pom.xml
@@ -35,7 +35,7 @@
             <artifactId>hibernate-search-mapper-orm</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.graalvm.nativeimage</groupId>
+            <groupId>com.oracle.substratevm</groupId>
             <artifactId>svm</artifactId>
         </dependency>
     </dependencies>
