--- a/core/runtime/pom.xml
+++ b/core/runtime/pom.xml
@@ -70,7 +70,7 @@
             <artifactId>graal-sdk</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.graalvm.nativeimage</groupId>
+            <groupId>com.oracle.substratevm</groupId>
             <artifactId>svm</artifactId>
         </dependency>
         <dependency>
