--- a/integration-tests/vertx-graphql/pom.xml
+++ b/integration-tests/vertx-graphql/pom.xml
@@ -91,6 +91,7 @@
                                     <enableServer>false</enableServer>
                                     <dumpProxies>false</dumpProxies>
                                     <graalvmHome>${graalvmHome}</graalvmHome>
+                                    <enableJni>true</enableJni>
                                     <enableAllSecurityServices>true</enableAllSecurityServices>
                                     <enableReports>false</enableReports>
                                 </configuration>
