--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -168,6 +168,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-kafka-streams-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-smallrye-reactive-streams-operators-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
