Add test resource for provide a MongoDB for testing.

--- a/test-framework/pom.xml
+++ b/test-framework/pom.xml
@@ -17,6 +17,7 @@
         <module>artemis-test</module>
         <module>common</module>
         <module>h2</module>
+        <module>mongodb</module>
         <module>derby</module>
         <module>kubernetes-client</module>
         <module>junit5-internal</module>
