--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -764,6 +764,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-test-mongodb</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-test-derby</artifactId>
                 <version>${project.version}</version>
             </dependency>
