--- a/test-framework/mongodb/pom.xml
+++ b/test-framework/mongodb/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <artifactId>quarkus-test-mongodb</artifactId>
-    <name>Quarkus - Test framework - MongoDB Database Support</name>
+    <name>Quarkus - Test Framework - MongoDB Database Support</name>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
