--- a/ci-templates/native-build-steps.yaml
+++ b/ci-templates/native-build-steps.yaml
@@ -28,7 +28,7 @@ jobs:
     - task: DownloadPipelineArtifact@1
       inputs:
         artifact: $(Build.SourceVersion)-BuiltMavenRepo
-        path: $(Pipeline.Workspace)/.m2/repository/
+        targetPath: $(Pipeline.Workspace)/.m2/repository/
     - ${{ if eq(parameters.postgres, 'true') }}:
       - script: docker run --rm --publish 5432:5432 --name build-postgres -e POSTGRES_USER=hibernate_orm_test -e POSTGRES_PASSWORD=hibernate_orm_test -e POSTGRES_DB=hibernate_orm_test -d postgres:10.5
         displayName: 'start postgres'
